force-app/main/default/objects/Tasks__c/Tasks__c.object-meta.xml
<CustomObject>
    <label>Task</label>
    <nameField>
        <displayFormat>TaskId - {00000}</displayFormat>
        <label>Tasks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>