force-app/main/default/objects/Tasks__c/fields/Action_Taken_Details__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken_Details__c</fullName>
    <label>Action Taken Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>