force-app/main/default/objects/Tasks__c/fields/Assistance_Needed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Needed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assistance Needed Flag</label>
    <type>Checkbox</type>
</CustomField>