force-app/main/default/objects/Tasks__c/fields/Avoidable__c.field-meta.xml
<CustomField>
    <fullName>Avoidable__c</fullName>
    <label>Avoidable</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes-Rubrik</fullName>
            </value>
            <value>
                <fullName>Yes-Support Engineer</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>