force-app/main/default/objects/Tasks__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>RMA/Logistics</fullName>
            </value>
            <value>
                <fullName>RMA/Field Support Team(Smart Hands )</fullName>
            </value>
            <value>
                <fullName>Accounts/Sales</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
                <isActive>false</isActive>
                <label>Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>