force-app/main/default/objects/Tasks__c/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <label>CSAT Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>