force-app/main/default/objects/Tasks__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception</label>
    <type>Checkbox</type>
</CustomField>