force-app/main/default/objects/Tasks__c/fields/Ignore_NCC_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Ignore_NCC_Expiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CS21-1806</description>
    <inlineHelpText>If NCC Expiry date needs to be ignored.</inlineHelpText>
    <label>Ignore NCC Expiry</label>
    <type>Checkbox</type>
</CustomField>