force-app/main/default/objects/Tasks__c/fields/Lessons_Learnt_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learnt_Summary__c</fullName>
    <label>Lessons Learnt Summary</label>
    <type>TextArea</type>
</CustomField>