force-app/main/default/objects/Tasks__c/fields/NCC_Last_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>NCC_Last_Updated_At__c</fullName>
    <description>CS21-1806</description>
    <inlineHelpText>Populates the timestamp when the NCC date was last modified.</inlineHelpText>
    <label>NCC Last Updated At</label>
    <type>DateTime</type>
</CustomField>