force-app/main/default/objects/Tasks__c/fields/NCC_Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>NCC_Last_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CS21-1806</description>
    <inlineHelpText>Populates the User details who modified the NCC date in the last.</inlineHelpText>
    <label>NCC Last Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks3</relationshipName>
    <type>Lookup</type>
</CustomField>