force-app/main/default/objects/Tasks__c/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Task</relationshipName>
    <type>Lookup</type>
</CustomField>