force-app/main/default/objects/Tasks__c/fields/Owner_Manager_CEM__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_CEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner[Manager/CEM]</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>