force-app/main/default/objects/Tasks__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case/customer Handling Skills</fullName>
            </value>
            <value>
                <fullName>Delayed Resolution</fullName>
            </value>
            <value>
                <fullName>Delayed RMA</fullName>
            </value>
            <value>
                <fullName>False Commitment</fullName>
            </value>
            <value>
                <fullName>Increased urgency or Impact</fullName>
            </value>
            <value>
                <fullName>Missed Commitment</fullName>
            </value>
            <value>
                <fullName>Missing Shipment Tracking Info</fullName>
            </value>
            <value>
                <fullName>Misuse</fullName>
            </value>
            <value>
                <fullName>Misuse or Unreasonable Expectations</fullName>
            </value>
            <value>
                <fullName>Process/Tools</fullName>
            </value>
            <value>
                <fullName>Queue Availability</fullName>
            </value>
            <value>
                <fullName>Responsiveness</fullName>
            </value>
            <value>
                <fullName>Supportability</fullName>
            </value>
            <value>
                <fullName>Tech Skills / Process / Tools</fullName>
            </value>
            <value>
                <fullName>Time Zone Mismatch</fullName>
            </value>
            <value>
                <fullName>Communication/Language</fullName>
                <isActive>false</isActive>
                <label>Communication/Language</label>
            </value>
            <value>
                <fullName>Contract /Entitlement Issue</fullName>
                <isActive>false</isActive>
                <label>Contract /Entitlement Issue</label>
            </value>
            <value>
                <fullName>Delay in RMA Creation</fullName>
                <isActive>false</isActive>
                <label>Delay in RMA Creation</label>
            </value>
            <value>
                <fullName>Delayed Shipment</fullName>
                <isActive>false</isActive>
                <label>Delayed Shipment</label>
            </value>
            <value>
                <fullName>Documentation Quality</fullName>
                <isActive>false</isActive>
                <label>Documentation Quality</label>
            </value>
            <value>
                <fullName>Ease of Use</fullName>
                <isActive>false</isActive>
                <label>Ease of Use</label>
            </value>
            <value>
                <fullName>Elevation Delay to Engineering</fullName>
                <isActive>false</isActive>
                <label>Elevation Delay to Engineering</label>
            </value>
            <value>
                <fullName>Elevation Delay to GET</fullName>
                <isActive>false</isActive>
                <label>Elevation Delay to GET</label>
            </value>
            <value>
                <fullName>Engineer OOO</fullName>
                <isActive>false</isActive>
                <label>Engineer OOO</label>
            </value>
            <value>
                <fullName>Equipment Return Process</fullName>
                <isActive>false</isActive>
                <label>Equipment Return Process</label>
            </value>
            <value>
                <fullName>Feature Missing</fullName>
                <isActive>false</isActive>
                <label>Feature Missing</label>
            </value>
            <value>
                <fullName>Fix Not available</fullName>
                <isActive>false</isActive>
                <label>Fix Not available</label>
            </value>
            <value>
                <fullName>Handoff Miss</fullName>
                <isActive>false</isActive>
                <label>Handoff Miss</label>
            </value>
            <value>
                <fullName>Hardware Quality</fullName>
                <isActive>false</isActive>
                <label>Hardware Quality</label>
            </value>
            <value>
                <fullName>Improper Closure</fullName>
                <isActive>false</isActive>
                <label>Improper Closure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>