force-app/main/default/objects/Tasks__c/fields/Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account__c</fullName>
    <formula>Case__r.Account.Strategic_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Account</label>
    <type>Checkbox</type>
</CustomField>