force-app/main/default/objects/Tasks__c/fields/Support_Manager__c.field-meta.xml
<CustomField>
    <fullName>Support_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will be auto-updated based on the Support Engineer user record, once you hit the Save button.</inlineHelpText>
    <label>Support Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>