force-app/main/default/objects/Tasks__c/fields/Task_Created_date_time__c.field-meta.xml
<CustomField>
    <fullName>Task_Created_date_time__c</fullName>
    <description>CS21-2241: To display both created date and time on the reports</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Created Date Time</label>
    <type>DateTime</type>
</CustomField>