force-app/main/default/objects/Tasks__c/fields/Task_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Sub_Type__c</fullName>
    <label>Task Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal Triggered Escalation</fullName>
            </value>
            <value>
                <fullName>Manual (Rubrik Internal)</fullName>
            </value>
            <value>
                <fullName>Red Alert</fullName>
            </value>
            <value>
                <fullName>Yellow Alert</fullName>
            </value>
            <value>
                <fullName>NPS &lt;= 7</fullName>
            </value>
            <value>
                <fullName>CSAT &lt;= 3</fullName>
            </value>
            <value>
                <fullName>NCC Expiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>