force-app/main/default/objects/Tasks__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Escalation</fullName>
            </value>
            <value>
                <fullName>Customer Thermometer</fullName>
            </value>
            <value>
                <fullName>Negative Survey Feedback</fullName>
            </value>
            <value>
                <fullName>Lessons Learnt</fullName>
            </value>
            <value>
                <fullName>NCC Expiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>