force-app/main/default/objects/Tasks__c/listViews/All_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Owner_ID__c</columns>
    <columns>Task_Type__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Tasks</label>
</ListView>